# DramaFlux

./: .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  pyproject.toml
services/api-server/: .env.example  README.md  pyproject.toml
services/api-server/scripts/: capture_session.ps1  start.ps1
services/api-server/src/hongguo_api/: __init__.py  bootstrap_app.py  cache.py  config.py  errors.py  main.py  models.py  pagination.py  web.py
services/api-server/tests/fixtures/: detail.json  latest.json  rank.json  search.json  video_model.json
services/api-server/tests/integration/: test_bootstrap_app.py  test_error_mapping.py  test_routes.py  test_signer_client.py  test_web.py
services/api-server/tests/live/: test_api_live.py
services/api-server/tests/unit/: test_cache.py  test_detail_video_parsers.py  test_list_parsers.py  test_pagination.py  test_session_parser.py  test_session_storage.py  test_transport.py  test_upstream_client_detail_video.py  test_upstream_client_lists.py
services/api-server/web/: index.html  package-lock.json  package.json  vite.config.ts
services/api-server/web/src/: App.test.tsx  App.tsx  styles.css
services/signer-service/: .env.example  README.md  pyproject.toml
services/signer-service/scripts/: check_environment.ps1  start.ps1
services/signer-service/src/hongguo_signer/: __init__.py  bootstrap_app.py  config.py  main.py  security.py
services/signer-service/tests/integration/: test_signer_api.py
services/signer-service/tests/live/: conftest.py  test_signer_live.py
services/signer-service/tests/unit/: test_device.py  test_environment_files.py  test_frida_bootstrap.py  (+3 more)
(+61 files in other folders)
