[project]
name = "hongguo-video-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/hongguo-contracts",
  "services/signer-service",
  "services/api-server",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "respx>=0.22",
  "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "packages/hongguo-contracts/tests",
  "services/signer-service/tests",
  "services/api-server/tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
