[project]
name = "hongguo-api-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "cachetools>=5.5",
  "fastapi>=0.115",
  "hongguo-contracts",
  "httpx>=0.28",
  "pydantic-settings>=2.7",
  "uvicorn>=0.34",
]

[tool.uv.sources]
hongguo-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hongguo_api"]
