[project]
name = "hongguo-signer-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "frida==16.7.19",
  "hongguo-contracts",
  "pydantic-settings>=2.7",
  "uvicorn>=0.34",
]

[tool.uv.sources]
hongguo-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hongguo_signer"]
